--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,4 +1,7 @@
 
+nav{
+    
+}
 nav button{
    color: #989898;
     font-size: 0.85rem;
@@ -12,7 +15,7 @@ nav button{
 
 }
 nav button:hover{
-    background-color: yellow;
+    background-color: #ffee00;
     color: #124af4;
    
 }
