--- a/src/Components/Category.css
+++ b/src/Components/Category.css
@@ -18,9 +18,16 @@
     font-size: 1.5rem;
 }
 body{
-    background-color: #f4f4f4;
+    background-color: white;
    
 }
+.icon{
+    width: 60px;
+    height: auto;
+}
+
+
+
 
 
 
